Update Groupon responsibilities

--- a/src/public/resume.html
+++ b/src/public/resume.html
@@ -138,15 +138,10 @@
         </table>
 
         <p class="job-title">Software Design Engineer in Test III</p>
-
-        <p>Interviewed and built up a highly capable test team while learning the travel industry. Pushed for and
-            got
-            test involved in story creation, providing help with both design feedback and acceptance criteria. Built
-            efficient Continuous Integration environments using Linux Containers, Docker and Fig. Oversaw and
-            reported
-            on testing of backend services while responsible for new services. Created tools for self-service
-            performance tests used across all of Groupon, trained Getways testers to read performance graphs and
-            identify potential issues and recommended solutions.</p>
+        <p>
+				As the tester for the Relevance Algorithms team, I am responsible for updating and stabilizing the build and deployment systems. The team is now deploying on a weekly basis and is capable of deploying on a daily basis. In addition I am automating the test infrastructure, continuous deployment and performance testing and evaluation of the output from the ranking system.</p>
+				<p>As the senior tester on the Getaways Team, my responsibilities were to design and lead the efforts to build the test infrastructure for the Getaways team. Projects included designing a business process oriented dashboard for team directors and above, leading an effort to standardize testing infrastructure across four silos of work and use Linux containers to enable six to ten projects to proceed on independent timelines without impacting each other using only two pre-production environments.</p>
+				<p>I interviewed and built up a highly capable test team while learning the travel industry. Pushed for and got test involved in story creation, providing help with both design feedback and acceptance criteria. Built efficient Continuous Integration environments using Linux Containers and Docker. Oversaw and reported on testing of backend services while responsible for new services. Created tools for self-service performance tests used across all of Groupon, trained Getaways testers to read performance graphs and identify potential issues and recommended solutions.</p>
     </div>
 </div>
 <div class="row job">
