Move to appengine

--- a/static/vsts.html
+++ b/static/vsts.html
@@ -61,19 +61,12 @@
 </div>
 <div class="container">
     <p>
-        I am a software tester with 14 years experience working for Groupon Getaways (travel). Most of my career was at
-        Microsoft, working on Windows (2000 and XP),
-        <b>S</b>ystems <b>M</b>anagement <b>S</b>erver (now <b>S</b>ystem <b>C</b>enter
-        <b>C</b>onfiguration <b>M</b>anager) and then Bing Maps and MSN.com. I have learned functional testing,
-        security review process, exploratory testing and performance testing. The past 5 years I have been working with
-        server based applications and SOA web-services in both Windows and Linux based data centers.
+      On many web services teams, performance is a key concern. Latency increases in the tens of milliseconds can over 10% increases in the number of dropped user sessions.        
+    </p>
+    <p>
+      On the MSN Core Rendering team, I used Visual Studio Test System to create load and performance testing suites, allowing data driven unit tests to be used to quickly create suites and generate reports to allow the team to be aware of performance regressions.
     </p>
 
-    <p>
-        This site is meant to showcase my work, both professional and personal. For obvious reasons I can not share
-        the code of the professional projects but I can share the code that I have written for personal projects.
-        I am a role-playing game fanatic and my personal projects reflect that.
-    </p>
 </div>
 </body>
 </html>
