--- a/static/test_env.html
+++ b/static/test_env.html
@@ -44,7 +44,7 @@
 										<li><a href='grinder.html'>Grinder</a></li>
                     <li class="divider"></li>
 
-                    <li>Managing Test Environments with Fig and Docker</li>
+                    <li>Managing Test Environments</li>
                 </ul>
             </li>
         </ul>
@@ -61,18 +61,11 @@
 </div>
 <div class="container">
     <p>
-        I am a software tester with 14 years experience working for Groupon Getaways (travel). Most of my career was at
-        Microsoft, working on Windows (2000 and XP),
-        <b>S</b>ystems <b>M</b>anagement <b>S</b>erver (now <b>S</b>ystem <b>C</b>enter
-        <b>C</b>onfiguration <b>M</b>anager) and then Bing Maps and MSN.com. I have learned functional testing,
-        security review process, exploratory testing and performance testing. The past 5 years I have been working with
-        server based applications and SOA web-services in both Windows and Linux based data centers.
+        One of the many challenges that modern development teams face is keeping a working pre-production environment. Changes to services you are dependent on and data in them can prevent the services under development from being testable.
     </p>
 
     <p>
-        This site is meant to showcase my work, both professional and personal. For obvious reasons I can not share
-        the code of the professional projects but I can share the code that I have written for personal projects.
-        I am a role-playing game fanatic and my personal projects reflect that.
+        On the Getaways team I created a stable test environment contained in Docker containers, configurations that used this environment for unit and integration testing. This included changes to the team build environment to create new versioned Docker images for use in the environment and to the development environment to allow one touch updates to the developers environment.
     </p>
 </div>
 </body>
