- Add robots.txt - Use Microdata to specify contact info

--- a/static/resume.html
+++ b/static/resume.html
@@ -49,14 +49,14 @@
         </ul>
     </div>
 </nav>
-<div class="container-fluid">
+<div itemscope itemptype="http://schema.org/Person" class="container-fluid">
 <div class="h-card ">
     <div class="header" id="content">
         <div class="row bg-primary">
             <div class="col-md-10 col-xm-10 col-xs-10">
-                <h1 itemprop="p-name">Sean Chitwood</h1>
+                <h1 itemprop="name">Sean Chitwood</h1>
 
-                <p><span class="p-job-title">Software Tester</span> Extraordinaire and End to End Test Lead</p>
+                <p><span class="jobTitle">Software Tester</span> Extraordinaire and End to End Test Lead</p>
             </div>
         </div>
     </div>
